--- a/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
+++ b/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
@@ -10,129 +10,171 @@
     <div class="onboarding-container">
         <div class="carousel-wrapper">
             <div class="carousel" id="carousel">
-                <!-- Panel 1: Welcome -->
+                <!-- Panel 1: Instant Hook - Show the Magic -->
                 <div class="panel active" data-panel="1">
-                    <div class="panel-content">
-                        <h1>Welcome to TheQuickFox</h1>
-                        <p class="body-text">You're about to make your life easier in unexpected ways.</p>
+                    <div class="panel-content centered">
+                        <div class="magic-demo">
+                            <div class="demo-label">You type this...</div>
+                            <div class="typed-message rough" id="rough-text">cancel my sub</div>
+                            <div class="transform-arrow">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M12 5L12 19M12 19L6 13M12 19L18 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="demo-label polished-label">TheQuickFox writes this...</div>
+                            <div class="typed-message polished" id="polished-text"></div>
+                        </div>
+                        <p class="tagline">Turn rough drafts into polished messages. Instantly.</p>
                     </div>
                 </div>
 
-                <!-- Panel 2: Reply Example -->
+                <!-- Panel 2: Interactive Try It - The Win -->
                 <div class="panel" data-panel="2">
                     <div class="panel-content">
-                        <h1>Let's say you get a support request:</h1>
-                        <div class="mock-support-app">
-                            <div class="support-header">
-                                <div class="window-controls">
-                                    <span class="window-button close"></span>
-                                    <span class="window-button minimize"></span>
-                                    <span class="window-button maximize"></span>
-                                </div>
-                                <span class="app-name">PretendSupport</span>
+                        <h1>Now you try</h1>
+                        <p class="subtitle">Type something rough. Watch it transform.</p>
+
+                        <div class="try-it-container">
+                            <div class="input-section">
+                                <label for="user-input">Your rough draft:</label>
+                                <textarea id="user-input" placeholder="e.g. &quot;hey can we reschedule mtg tmrw?&quot;" rows="2"></textarea>
                             </div>
-                            <div class="support-ticket">
-                                <div class="ticket-message">
-                                    <div class="message-author">buzz@killington.com:</div>
-                                    <div class="message-content">Cancel my account</div>
-                                </div>
-                                <div class="reply-section">
-                                    <label for="reply-field">Reply:</label>
-                                    <div class="reply-input-group">
-                                        <textarea id="reply-field" class="reply-textarea" placeholder="Type your reply..."></textarea>
-                                        <button class="submit-arrow" aria-label="Send reply">
-                                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M2 10L17 10M17 10L12 5M17 10L12 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
-                                        </button>
-                                    </div>
+
+                            <div class="tone-selector">
+                                <span class="tone-label">Tone:</span>
+                                <div class="tone-chips">
+                                    <button class="tone-chip active" data-tone="professional">Professional</button>
+                                    <button class="tone-chip" data-tone="friendly">Friendly</button>
+                                    <button class="tone-chip" data-tone="formal">Formal</button>
                                 </div>
                             </div>
+
+                            <button class="transform-btn" id="transform-btn" onclick="transformText()">
+                                <span class="btn-text">Transform</span>
+                                <span class="btn-loader" style="display: none;"></span>
+                            </button>
+
+                            <div class="output-section" id="output-section" style="display: none;">
+                                <label>Polished result:</label>
+                                <div class="output-text" id="output-text"></div>
+                                <button class="copy-btn" onclick="copyResult()">Copy</button>
+                            </div>
                         </div>
-                        <div class="steps">
-                            <ol>
-                                <li>
-                                    With <em>Reply</em> field focused, press
-                                    <span class="keyboard-shortcut">
-                                        <span class="key-visual">
-                                            <span class="key-symbol">⌃</span>
-                                            <span class="key-text">control</span>
-                                        </span>
-                                        <span class="times-indicator">×2</span>
-                                    </span>
-                                </li>
-                                <li>That activates TheQuickFox. In TheQuickFox reply to the customer (e.g.: "Just cancelled. Feedback?") and press Enter.</li>
-                                <li>TheQuickFox takes your terse response that you'd never send to a customer and makes it <emb>professional</emb>, <em>friendly</em>, or even <em>flirty</em>!</li>
-                            </ol>
-                        </div>
+
+                        <p class="win-text" id="win-text" style="display: none;">That's it. You just saved 5 minutes of editing.</p>
                     </div>
                 </div>
 
-                <!-- Panel 3: Feedback Example -->
+                <!-- Panel 3: Unlock Global Access -->
                 <div class="panel" data-panel="3">
                     <div class="panel-content">
-                        <h1>Let's say you want feedback on your new logo.</h1>
-                        <div class="mock-logo-app">
-                            <div class="logo-header">
-                                <div class="window-controls">
-                                    <span class="window-button close"></span>
-                                    <span class="window-button minimize"></span>
-                                    <span class="window-button maximize"></span>
-                                </div>
-                                <span class="app-name">Pretend Logo Maker</span>
+                        <div class="unlock-hero">
+                            <div class="keyboard-demo">
+                                <span class="key-visual large">
+                                    <span class="key-symbol">^</span>
+                                    <span class="key-text">control</span>
+                                </span>
+                                <span class="times-badge">x2</span>
                             </div>
-                            <div class="logo-content">
-                                <div class="logo-placeholder">
-                                    <img src="sample-logo.png" alt="Sample Logo" class="logo-image">
-                                </div>
+                            <h1>Use it anywhere</h1>
+                            <p class="subtitle">Double-press Control in any app to summon TheQuickFox.</p>
+                        </div>
+
+                        <div class="permission-card" id="accessibility-card">
+                            <div class="permission-icon">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
+                                    <path d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" stroke="currentColor" stroke-width="2"/>
+                                    <path d="M2 12C2 12 5 5 12 5C19 5 22 12 22 12C22 12 19 19 12 19C5 19 2 12 2 12Z" stroke="currentColor" stroke-width="2"/>
+                                </svg>
                             </div>
+                            <div class="permission-info">
+                                <h3>Accessibility Access</h3>
+                                <p>Required to detect the double-Control shortcut globally</p>
+                            </div>
+                            <button class="permission-btn" id="accessibility-btn" onclick="grantPermission('accessibility')">Enable</button>
                         </div>
-                        <div class="steps">
-                            <ol>
-                                <li>
-                                    Press
-                                    <span class="keyboard-shortcut">
-                                        <span class="key-visual">
-                                            <span class="key-symbol">⌃</span>
-                                            <span class="key-text">control</span>
-                                        </span>
-                                        <span class="times-indicator">×2</span>
-                                    </span>
-                                </li>
-                                <li>When TheQuickFox pops up, type: "Give me feedback on my logo" then press Enter.</li>
-                            </ol>
-                        </div>
+
+                        <p class="privacy-note">We only detect the Control key. We never log your keystrokes.</p>
                     </div>
                 </div>
 
-                <!-- Panel 4: Permissions -->
+                <!-- Panel 4: Screen Context (Optional) -->
                 <div class="panel" data-panel="4">
                     <div class="panel-content">
-                        <h1>To work across your apps, TheQuickFox needs these permissions:</h1>
-                        <div class="permissions-list">
-                            <div class="permission-item">
-                                <span class="permission-name">Accessibility</span>
-                                <button class="grant-button" onclick="grantPermission('accessibility')">Grant</button>
+                        <div class="feature-preview">
+                            <div class="feature-icon">
+                                <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
+                                    <rect x="2" y="3" width="20" height="14" rx="2" stroke="currentColor" stroke-width="2"/>
+                                    <path d="M8 21H16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M12 17V21" stroke="currentColor" stroke-width="2"/>
+                                    <circle cx="12" cy="10" r="2" stroke="currentColor" stroke-width="2"/>
+                                </svg>
                             </div>
-                            <div class="permission-item">
-                                <span class="permission-name">Screen Recording</span>
-                                <button class="grant-button" onclick="grantPermission('screenRecording')">Grant</button>
+                            <h1>Context-aware AI</h1>
+                            <p class="subtitle">TheQuickFox can see your screen to give smarter answers.</p>
+                        </div>
+
+                        <div class="examples-list">
+                            <div class="example-item">
+                                <span class="example-icon">Q</span>
+                                <span>"What's wrong with this code?"</span>
+                            </div>
+                            <div class="example-item">
+                                <span class="example-icon">Q</span>
+                                <span>"Summarize this article"</span>
+                            </div>
+                            <div class="example-item">
+                                <span class="example-icon">Q</span>
+                                <span>"Give feedback on this design"</span>
                             </div>
                         </div>
 
-                        <div class="email-section">
-                            <label for="email-field" class="email-label">Email address</label>
-                            <input type="email" id="email-field" class="email-input" placeholder="you@example.com" oninput="updateEmailValidity()">
+                        <div class="permission-card" id="screen-card">
+                            <div class="permission-icon">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
+                                    <rect x="2" y="3" width="20" height="14" rx="2" stroke="currentColor" stroke-width="2"/>
+                                    <path d="M8 21H16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M12 17V21" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </div>
+                            <div class="permission-info">
+                                <h3>Screen Recording</h3>
+                                <p>Lets TheQuickFox see your active window for context</p>
+                            </div>
+                            <button class="permission-btn" id="screen-btn" onclick="grantPermission('screenRecording')">Enable</button>
                         </div>
 
-                        <div class="terms-section">
-                            <div class="terms-item">
-                                <input type="checkbox" id="terms-checkbox" class="terms-checkbox" onchange="updateTermsAcceptance()">
-                                <label for="terms-checkbox" class="terms-label">
-                                    I agree to the <a href="https://www.thequickfox.ai/terms.html" onclick="openTermsOfService(event)" target="_blank">Terms of Service</a>
-                                    and <a href="https://www.thequickfox.ai/privacy.html" onclick="openPrivacyPolicy(event)" target="_blank">Privacy Policy</a>.
-                                </label>
-                            </div>
+                        <button class="skip-btn" onclick="skipScreenRecording()">I'll set this up later</button>
+                    </div>
+                </div>
+
+                <!-- Panel 5: Final Setup -->
+                <div class="panel" data-panel="5">
+                    <div class="panel-content centered">
+                        <div class="ready-icon">
+                            <svg width="64" height="64" viewBox="0 0 24 24" fill="none">
+                                <path d="M9 12L11 14L15 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h1>Almost there</h1>
+                        <p class="subtitle">One last thing to activate your free trial.</p>
+
+                        <div class="email-form">
+                            <input type="email" id="email-field" placeholder="your@email.com" oninput="updateEmailValidity()">
+                        </div>
+
+                        <div class="terms-row">
+                            <input type="checkbox" id="terms-checkbox" onchange="updateTermsAcceptance()">
+                            <label for="terms-checkbox">
+                                I agree to the <a href="#" onclick="openTermsOfService(event)">Terms of Service</a>
+                                and <a href="#" onclick="openPrivacyPolicy(event)">Privacy Policy</a>
+                            </label>
+                        </div>
+
+                        <div class="trial-info">
+                            <span class="trial-badge">FREE TRIAL</span>
+                            <span class="trial-text">10 free queries to try TheQuickFox</span>
                         </div>
                     </div>
                 </div>
@@ -141,16 +183,20 @@
 
         <!-- Navigation -->
         <div class="navigation">
-            <button class="nav-button back-button" onclick="navigateBack()" style="display: none;">Back</button>
+            <button class="nav-button back-button" onclick="navigateBack()" style="visibility: hidden;">Back</button>
             <div class="progress-dots">
                 <span class="dot active" data-panel="1"></span>
                 <span class="dot" data-panel="2"></span>
                 <span class="dot" data-panel="3"></span>
                 <span class="dot" data-panel="4"></span>
+                <span class="dot" data-panel="5"></span>
             </div>
-            <button class="nav-button continue-button" onclick="navigateNext()">Continue</button>
+            <button class="nav-button continue-button" id="continue-btn" onclick="navigateNext()">Try It</button>
         </div>
     </div>
+
+    <!-- Confetti Canvas -->
+    <canvas id="confetti-canvas"></canvas>
 
     <script src="app.js"></script>
 </body>
