macos: permission appears at same time as onboaring

--- a/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
+++ b/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
@@ -13,18 +13,24 @@
                 <!-- Panel 1: Instant Hook - Show the Magic -->
                 <div class="panel active" data-panel="1">
                     <div class="panel-content centered">
-                        <div class="magic-demo">
-                            <div class="demo-label">You type this...</div>
-                            <div class="typed-message rough" id="rough-text">cancel my sub</div>
-                            <div class="transform-arrow">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                    <path d="M12 5L12 19M12 19L6 13M12 19L18 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <h1>Write less. Say more.</h1>
+                        <p class="subtitle">TheQuickFox turns your rough thoughts into polished messages.</p>
+
+                        <div class="before-after">
+                            <div class="before-box">
+                                <span class="box-label">You type</span>
+                                <p>"running late 10 min"</p>
+                            </div>
+                            <div class="arrow-icon">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
+                                    <path d="M5 12H19M19 12L13 6M19 12L13 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </div>
-                            <div class="demo-label polished-label">TheQuickFox writes this...</div>
-                            <div class="typed-message polished" id="polished-text"></div>
+                            <div class="after-box">
+                                <span class="box-label">TheQuickFox writes</span>
+                                <p>"Hi! Just wanted to let you know I'm running about 10 minutes behind. I'll be there shortly - thanks for your patience!"</p>
+                            </div>
                         </div>
-                        <p class="tagline">Turn rough drafts into polished messages. Instantly.</p>
                     </div>
                 </div>
 
@@ -94,8 +100,7 @@
                             <button class="permission-btn" id="accessibility-btn" onclick="grantPermission('accessibility')">Enable</button>
                         </div>
 
-                        <p class="privacy-note">We only detect the Control key. We never log your keystrokes.</p>
-                    </div>
+                                            </div>
                 </div>
 
                 <!-- Panel 4: Screen Context (Optional) -->
@@ -144,8 +149,7 @@
                             <button class="permission-btn" id="screen-btn" onclick="grantPermission('screenRecording')">Enable</button>
                         </div>
 
-                        <button class="skip-btn" onclick="skipScreenRecording()">I'll set this up later</button>
-                    </div>
+                                            </div>
                 </div>
 
                 <!-- Panel 5: Final Setup -->
@@ -174,7 +178,7 @@
 
                         <div class="trial-info">
                             <span class="trial-badge">FREE TRIAL</span>
-                            <span class="trial-text">10 free queries to try TheQuickFox</span>
+                            <span class="trial-text">1 week free to try TheQuickFox</span>
                         </div>
                     </div>
                 </div>
