--- a/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
+++ b/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
@@ -134,30 +134,58 @@
                 <!-- Panel 5: Final Setup -->
                 <div class="panel" data-panel="5">
                     <div class="panel-content centered">
-                        <div class="ready-icon">
-                            <svg width="64" height="64" viewBox="0 0 24 24" fill="none">
-                                <path d="M9 12L11 14L15 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-                            </svg>
-                        </div>
-                        <h1>Almost there</h1>
-                        <p class="subtitle">One last thing to activate your free trial.</p>
+                        <!-- Pre-completion state -->
+                        <div id="setup-state">
+                            <div class="ready-icon">
+                                <svg width="64" height="64" viewBox="0 0 24 24" fill="none">
+                                    <path d="M9 12L11 14L15 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </div>
+                            <h1>Almost there</h1>
+                            <p class="subtitle">One last thing to activate your free trial.</p>
 
-                        <div class="email-form">
-                            <input type="email" id="email-field" placeholder="your@email.com" oninput="updateEmailValidity()">
+                            <div class="email-form">
+                                <input type="email" id="email-field" placeholder="your@email.com" oninput="updateEmailValidity()">
+                            </div>
+
+                            <div class="terms-row">
+                                <input type="checkbox" id="terms-checkbox" onchange="updateTermsAcceptance()">
+                                <label for="terms-checkbox">
+                                    I agree to the <a href="#" onclick="openTermsOfService(event)">Terms of Service</a>
+                                    and <a href="#" onclick="openPrivacyPolicy(event)">Privacy Policy</a>
+                                </label>
+                            </div>
+
+                            <div class="trial-info">
+                                <span class="trial-badge">FREE TRIAL</span>
+                                <span class="trial-text">1 week free to try TheQuickFox</span>
+                            </div>
                         </div>
 
-                        <div class="terms-row">
-                            <input type="checkbox" id="terms-checkbox" onchange="updateTermsAcceptance()">
-                            <label for="terms-checkbox">
-                                I agree to the <a href="#" onclick="openTermsOfService(event)">Terms of Service</a>
-                                and <a href="#" onclick="openPrivacyPolicy(event)">Privacy Policy</a>
-                            </label>
-                        </div>
+                        <!-- Post-completion state -->
+                        <div id="success-state" style="display: none;">
+                            <div class="success-icon">
+                                <svg width="80" height="80" viewBox="0 0 24 24" fill="none">
+                                    <path d="M9 12L11 14L15 10" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </div>
+                            <h1>You're all set!</h1>
+                            <p class="subtitle">TheQuickFox is ready to use.</p>
 
-                        <div class="trial-info">
-                            <span class="trial-badge">FREE TRIAL</span>
-                            <span class="trial-text">1 week free to try TheQuickFox</span>
+                            <div class="next-step">
+                                <div class="keyboard-hint">
+                                    <span class="key-visual">
+                                        <span class="key-symbol">^</span>
+                                        <span class="key-text">control</span>
+                                    </span>
+                                    <span class="times-badge">x2</span>
+                                </div>
+                                <p class="hint-text">Press Control twice in any app to summon TheQuickFox</p>
+                            </div>
+
+                            <button class="close-btn" onclick="closeOnboarding()">Close</button>
                         </div>
                     </div>
                 </div>
