--- a/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
+++ b/macos/Sources/TheQuickFox/Onboarding/Resources/index.html
@@ -13,22 +13,43 @@
                 <!-- Panel 1: Instant Hook - Show the Magic -->
                 <div class="panel active" data-panel="1">
                     <div class="panel-content centered">
-                        <h1>Write less. Say more.</h1>
-                        <p class="subtitle">TheQuickFox turns your rough thoughts into polished messages.</p>
+                        <h1>Your Context-Aware AI Assistant</h1>
+                        <p class="subtitle">Ask questions about what's on your screen. No copy-paste needed.</p>
 
-                        <div class="before-after">
-                            <div class="before-box">
-                                <span class="box-label">You type</span>
-                                <p>"running late 10 min"</p>
+                        <div class="use-cases">
+                            <div class="use-case">
+                                <span class="use-case-icon">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12 20H21M12 20V14M12 20L4 12L12 4L20 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </span>
+                                <div class="use-case-text">
+                                    <strong>Debug faster</strong>
+                                    <span>Explain errors, suggest fixes</span>
+                                </div>
                             </div>
-                            <div class="arrow-icon">
-                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
-                                    <path d="M5 12H19M19 12L13 6M19 12L13 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
+                            <div class="use-case">
+                                <span class="use-case-icon">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M21 11.5C21 16.75 16.75 21 11.5 21C6.25 21 2 16.75 2 11.5C2 6.25 6.25 2 11.5 2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                                        <path d="M22 2L15 9M22 2V8M22 2H16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </span>
+                                <div class="use-case-text">
+                                    <strong>Respond faster</strong>
+                                    <span>Draft replies to emails, messages, comments</span>
+                                </div>
                             </div>
-                            <div class="after-box">
-                                <span class="box-label">TheQuickFox writes</span>
-                                <p>"Hi! Just wanted to let you know I'm running about 10 minutes behind. I'll be there shortly - thanks for your patience!"</p>
+                            <div class="use-case">
+                                <span class="use-case-icon">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12 6.25278V19.2528M12 6.25278C10.8321 5.47686 9.24649 5 7.5 5C5.75351 5 4.16789 5.47686 3 6.25278V19.2528C4.16789 18.4769 5.75351 18 7.5 18C9.24649 18 10.8321 18.4769 12 19.2528M12 6.25278C13.1679 5.47686 14.7535 5 16.5 5C18.2465 5 19.8321 5.47686 21 6.25278V19.2528C19.8321 18.4769 18.2465 18 16.5 18C14.7535 18 13.1679 18.4769 12 19.2528" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </span>
+                                <div class="use-case-text">
+                                    <strong>Learn faster</strong>
+                                    <span>Clarify formulas, explain concepts</span>
+                                </div>
                             </div>
                         </div>
                     </div>
